# retrovr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
etc/: AndroidManifest.xml  gen_cmake_android.sh  init-post-checkout.sh
plugins/lovr-libretro/: CMakeLists.txt  log.h  lua-libretro.c  retro_intf.c  retro_intf.h
plugins/retro/: CMakeLists.txt  dlfcn.h  retro_intf.c  retro_intf.h
project/: main.lua  retro.lua  utils.lua
src/: console.lua  display.lua  main.lua  monitor.lua  retro.lua  utils.lua
